# debug2

./: Cargo.toml  README.md  justfile
derive/: Cargo.toml
derive/src/: lib.rs
src/: builders.rs  lib.rs  std_impls.rs
tests/: builders.rs  derived.rs  motivating.rs  refcell.rs
tests/snapshots/: builders__debug_list__empty.snap  builders__debug_list__multiple.snap  builders__debug_list__single.snap  builders__debug_map__multiple.snap  builders__debug_map__nested.snap  builders__debug_map__single.snap  builders__debug_set__empty.snap  builders__debug_set__multiple.snap  builders__debug_set__nested.snap  builders__debug_set__single.snap  builders__debug_struct__multiple.snap  builders__debug_struct__multiple_and_non_exhaustive.snap  builders__debug_struct__nested.snap  builders__debug_struct__nested_non_exhaustive.snap  builders__debug_struct__only_non_exhaustive.snap  builders__debug_struct__single.snap  builders__debug_tuple__empty.snap  builders__debug_tuple__multiple.snap  builders__debug_tuple__nested.snap  builders__debug_tuple__single.snap  derived__simple.snap  motivating__complex.snap  motivating__quadratic_form-2.snap  motivating__quadratic_form-3.snap  motivating__quadratic_form.snap
