[package]
name = "debug2"
version = "0.1.1"
edition = "2018"
description = "Space Efficient Pretty Printer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aDotInTheVoid/debug2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug2-derive = { path = "./derive", version = "0.1.1" }

[dev-dependencies]
insta = "1.7.1"

[workspace]
members = [
    ".",
    "./derive"
]