[package]
name = "debug2-derive"
version = "0.1.1"
edition = "2018"
description = "Derive macro for debug2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aDotInTheVoid/debug2/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.73"
synstructure = "0.12.5"
